# turboquant-kv

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/micro/: bench_quantize.py  bench_realworld.py  bench_standard.py  bench_triton_v2.py
benchmarks/quality/: bench_distortion.py
csrc/: registration.cpp
csrc/core/: bindings.cpp  turboquant_core.cpp  turboquant_core.h
csrc/cpu/: quant_cpu.cpp
csrc/cuda/: attn_scores.cu  attn_values.cu  quant_pack.cu  rotate_fused.cu
demos/: llama_quality_sweep.py  llm_kv_cache_demo.py  needle_in_haystack.py
results/: llama_quality_sweep.json  results_glove-200.json  results_random-128.json  results_random-1536.json  results_sift-1m.json
scripts/: make_llama_plot.py  make_plots.py
tests/: test_cache.py  test_reference.py
turboquant_kv/: __init__.py  _core.cp311-win_amd64.pyd  cache.py  config.py  distributed.py  entropy.py  hf_integration.py  nn.py  ops.py  reference.py  search.py  triton_kernels.py
turboquant_kv/vllm_plugin/: __init__.py
