[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-kv"
version = "0.1.0"
description = "TurboQuant: quantized KV cache compression and vector search (arXiv:2504.19874)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "TurboQuant Contributors"},
]
dependencies = [
    "numpy",
    "pybind11>=2.11",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
full = ["torch>=2.0", "scipy"]
transformers = ["transformers>=4.30"]
vllm = ["vllm>=0.3"]
dev = ["pytest>=7.0", "pytest-benchmark"]

[tool.setuptools.packages.find]
include = ["turboquant_kv*"]
